# text_generator

./: README.md  pyproject.toml  tasks.py
docs/: architecture.md  instructions.md  record_of_working_hours.md  requirements_specification.md  testing.md
docs/weekly_reports/: week_1.md  week_2.md  week_3.md  week_4.md  week_5.md  week_6.md
src/: build.py  index.py
src/data/: sherlock_holmes.txt
src/entities/: trie.py  trie_node.py
src/services/: __init__.py  clean_service.py  generate_service.py  markov_model.py  read_service.py  text_service.py
src/tests/entities/: trie_node_test.py  trie_test.py
src/tests/performance/: performance_test.py
src/tests/services/: clean_service_test.py  generate_service_test.py  markov_model_test.py  read_service_test.py  text_service_test.py
src/ui/: ui.py
src/ui/frames/: __init__.py  input_frame.py  loading_frame.py  select_frame.py  text_frame.py  value_frame.py
src/ui/views/: main_view.py
