[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = "Tiralabra syksy 2022"
authors = ["Matias Tolppanen <matias.tolppanen@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.10"
invoke = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
coverage = "^6.4.4"
pylint = "^2.15.2"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
